--- a/K-Means.ipynb
+++ b/K-Means.ipynb
@@ -16,7 +16,7 @@
     "# LOAD & CLEAN DATA\n",
     "# ------------------------------------------------------------\n",
     "\n",
-    "df = pd.read_csv(\"/mnt/data/FRED-QD_2025m01.csv\")\n",
+    "df = pd.read_csv(\"FRED-QD_2025m01.csv\")\n",
     "\n",
     "# Drop metadata rows\n",
     "df = df.drop(index=[0, 1]).reset_index(drop=True)\n",
@@ -98,8 +98,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
