--- a/Random Forest Regression.ipynb
+++ b/Random Forest Regression.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d4d41483",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== RANDOM FOREST RESULTS ===\n",
+      "MAE: 1440.18\n",
+      "R² Score: -4.615\n",
+      "\n",
+      "Feature Importances:\n",
+      "PCECC96: 0.333\n",
+      "FPIx: 0.252\n",
+      "GPDIC1: 0.224\n",
+      "S&P 500: 0.183\n",
+      "S&P PE ratio: 0.005\n",
+      "S&P div yield: 0.003\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -17,7 +35,7 @@
     "# LOAD & CLEAN DATA\n",
     "# ------------------------------------------------------------\n",
     "\n",
-    "df = pd.read_csv(\"/mnt/data/FRED-QD_2025m01.csv\")\n",
+    "df = pd.read_csv(\"FRED-QD_2025m01.csv\")\n",
     "\n",
     "# Drop the metadata rows\n",
     "df = df.drop(index=[0, 1]).reset_index(drop=True)\n",
@@ -86,8 +104,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
