--- a/K-Means.ipynb
+++ b/K-Means.ipynb
@@ -8,92 +8,53 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Load both datasets\n",
+    "df1 = pd.read_csv(\"FRED-QD_2025m01.csv\")\n",
+    "df2 = pd.read_csv(\"FRED-QD_2025m02.csv\")\n",
+    "\n",
+    "# OPTIONAL — ensure they align by date if a date column exists\n",
+    "# Example:\n",
+    "# df1 = df1.sort_values(\"DATE\")\n",
+    "# df2 = df2.sort_values(\"DATE\")\n",
+    "\n",
+    "# Combine the datasets side-by-side (axis=1)\n",
+    "combined_df = pd.concat([df1, df2], axis=1)\n",
+    "\n",
+    "# Drop non-numeric columns (important for ML)\n",
+    "combined_df = combined_df.select_dtypes(include=[\"float64\", \"int64\"])\n",
+    "\n",
+    "# Drop missing values\n",
+    "combined_df = combined_df.dropna()\n",
+    "\n",
+    "print(\"Combined dataset shape:\", combined_df.shape)\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.cluster import KMeans\n",
     "\n",
-    "# ------------------------------------------------------------\n",
-    "# LOAD & CLEAN DATA\n",
-    "# ------------------------------------------------------------\n",
+    "# Features only\n",
+    "X = combined_df\n",
     "\n",
-    "df = pd.read_csv(\"FRED-QD_2025m01.csv\")\n",
-    "\n",
-    "# Drop metadata rows\n",
-    "df = df.drop(index=[0, 1]).reset_index(drop=True)\n",
-    "\n",
-    "# Convert columns\n",
-    "df[\"sasdate\"] = pd.to_datetime(df[\"sasdate\"])\n",
-    "for col in df.columns[1:]:\n",
-    "    df[col] = pd.to_numeric(df[col], errors=\"coerce\")\n",
-    "\n",
-    "df = df.dropna()\n",
-    "\n",
-    "# ------------------------------------------------------------\n",
-    "# SELECT VARIABLES\n",
-    "# ------------------------------------------------------------\n",
-    "\n",
-    "features = [\n",
-    "    \"PCECC96\",   # Consumption\n",
-    "    \"GPDIC1\",    # Investment\n",
-    "    \"FPIx\",      # Price Index\n",
-    "    \"S&P 500\",   # Stock Market\n",
-    "    \"S&P div yield\",\n",
-    "    \"S&P PE ratio\"\n",
-    "]\n",
-    "\n",
-    "X = df[features]\n",
-    "\n",
-    "# ------------------------------------------------------------\n",
-    "# TRAIN/TEST SPLIT (80% train, 20% test)\n",
-    "# ------------------------------------------------------------\n",
-    "\n",
+    "# 80/20 split\n",
     "X_train, X_test = train_test_split(\n",
-    "    X, test_size=0.2, shuffle=False\n",
+    "    X, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
-    "# ------------------------------------------------------------\n",
-    "# SCALE FEATURES (IMPORTANT FOR K-MEANS)\n",
-    "# ------------------------------------------------------------\n",
-    "\n",
+    "# Scale data (VERY important for clustering)\n",
     "scaler = StandardScaler()\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "# ------------------------------------------------------------\n",
-    "# K-MEANS CLUSTERING (TRAIN ON 80%, ASSIGN 20%)\n",
-    "# ------------------------------------------------------------\n",
-    "\n",
+    "# K-Means model\n",
     "kmeans = KMeans(n_clusters=3, random_state=42)\n",
     "kmeans.fit(X_train_scaled)\n",
     "\n",
-    "# Assign clusters\n",
-    "train_clusters = kmeans.labels_\n",
+    "# Predict cluster labels for test data\n",
     "test_clusters = kmeans.predict(X_test_scaled)\n",
     "\n",
-    "# Attach cluster labels to original dataframes\n",
-    "df_train = X_train.copy()\n",
-    "df_train[\"cluster\"] = train_clusters\n",
-    "\n",
-    "df_test = X_test.copy()\n",
-    "df_test[\"cluster\"] = test_clusters\n",
-    "\n",
-    "# ------------------------------------------------------------\n",
-    "# DISPLAY RESULTS\n",
-    "# ------------------------------------------------------------\n",
-    "\n",
-    "print(\"=== K-MEANS RESULTS (80% Train / 20% Test) ===\\n\")\n",
-    "\n",
-    "print(\"Training set cluster distribution:\")\n",
-    "print(df_train[\"cluster\"].value_counts(), \"\\n\")\n",
-    "\n",
-    "print(\"Test set cluster distribution:\")\n",
-    "print(df_test[\"cluster\"].value_counts(), \"\\n\")\n",
-    "\n",
-    "print(\"Train Cluster Means:\")\n",
-    "print(df_train.groupby(\"cluster\")[features].mean(), \"\\n\")\n",
-    "\n",
-    "print(\"Test Cluster Means:\")\n",
-    "print(df_test.groupby(\"cluster\")[features].mean())\n"
+    "print(\"K-Means cluster labels for test set:\")\n",
+    "print(test_clusters)\n"
    ]
   }
  ],
