--- a/Random Forest Regression.ipynb
+++ b/Random Forest Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d4d41483",
    "metadata": {},
    "outputs": [
@@ -26,80 +26,51 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "# Load both datasets\n",
+    "df1 = pd.read_csv(\"FRED-QD_2025m01.csv\")\n",
+    "df2 = pd.read_csv(\"FRED-QD_2025m02.csv\")\n",
+    "\n",
+    "# OPTIONAL — ensure they align by date if a date column exists\n",
+    "# Example:\n",
+    "# df1 = df1.sort_values(\"DATE\")\n",
+    "# df2 = df2.sort_values(\"DATE\")\n",
+    "\n",
+    "# Combine the datasets side-by-side (axis=1)\n",
+    "combined_df = pd.concat([df1, df2], axis=1)\n",
+    "\n",
+    "# Drop non-numeric columns (important for ML)\n",
+    "combined_df = combined_df.select_dtypes(include=[\"float64\", \"int64\"])\n",
+    "\n",
+    "# Drop missing values\n",
+    "combined_df = combined_df.dropna()\n",
+    "\n",
+    "print(\"Combined dataset shape:\", combined_df.shape)\n",
+    "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_absolute_error, r2_score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "# ------------------------------------------------------------\n",
-    "# LOAD & CLEAN DATA\n",
-    "# ------------------------------------------------------------\n",
+    "# --------- SELECT TARGET ----------\n",
+    "target = combined_df.columns[0]\n",
+    "X = combined_df.drop(columns=[target])\n",
+    "y = combined_df[target]\n",
     "\n",
-    "df = pd.read_csv(\"FRED-QD_2025m01.csv\")\n",
-    "\n",
-    "# Drop the metadata rows\n",
-    "df = df.drop(index=[0, 1]).reset_index(drop=True)\n",
-    "\n",
-    "# Convert sasdate to datetime\n",
-    "df[\"sasdate\"] = pd.to_datetime(df[\"sasdate\"])\n",
-    "\n",
-    "# Convert numeric columns\n",
-    "for col in df.columns[1:]:\n",
-    "    df[col] = pd.to_numeric(df[col], errors=\"coerce\")\n",
-    "\n",
-    "# Remove rows with missing values\n",
-    "df = df.dropna()\n",
-    "\n",
-    "# ------------------------------------------------------------\n",
-    "# SELECT VARIABLES\n",
-    "# ------------------------------------------------------------\n",
-    "\n",
-    "features = [\n",
-    "    \"PCECC96\",     # Consumption\n",
-    "    \"GPDIC1\",      # Investment\n",
-    "    \"FPIx\",        # Price Index\n",
-    "    \"S&P 500\",     # Stock Index\n",
-    "    \"S&P div yield\",\n",
-    "    \"S&P PE ratio\"\n",
-    "]\n",
-    "\n",
-    "target = \"GDPC1\"   # GDP\n",
-    "\n",
-    "X = df[features]\n",
-    "y = df[target]\n",
-    "\n",
-    "# ------------------------------------------------------------\n",
-    "# TRAIN/TEST SPLIT\n",
-    "# ------------------------------------------------------------\n",
-    "\n",
+    "# 80% training, 20% testing\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, shuffle=False\n",
+    "    X, y, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
-    "# ------------------------------------------------------------\n",
-    "# RANDOM FOREST MODEL\n",
-    "# ------------------------------------------------------------\n",
-    "\n",
-    "rf = RandomForestRegressor(\n",
-    "    n_estimators=500,\n",
-    "    max_depth=10,\n",
-    "    random_state=42\n",
-    ")\n",
-    "\n",
+    "# Random Forest model\n",
+    "rf = RandomForestRegressor(n_estimators=200, random_state=42)\n",
     "rf.fit(X_train, y_train)\n",
+    "\n",
+    "# Predictions\n",
     "y_pred = rf.predict(X_test)\n",
     "\n",
-    "# ------------------------------------------------------------\n",
-    "# METRICS\n",
-    "# ------------------------------------------------------------\n",
-    "\n",
-    "print(\"=== RANDOM FOREST RESULTS ===\")\n",
-    "print(f\"MAE: {mean_absolute_error(y_test, y_pred):.2f}\")\n",
-    "print(f\"R² Score: {r2_score(y_test, y_pred):.3f}\")\n",
-    "\n",
-    "print(\"\\nFeature Importances:\")\n",
-    "for feat, imp in sorted(zip(features, rf.feature_importances_), key=lambda x: -x[1]):\n",
-    "    print(f\"{feat}: {imp:.3f}\")\n"
+    "# Model accuracy\n",
+    "mse = mean_squared_error(y_test, y_pred)\n",
+    "print(\"Random Forest MSE:\", mse)\n"
    ]
   }
  ],
